# OpenMC-PRISM

./: .dockerignore  DockerFile  Dockerfile  README.md  docker-compose.yml  dockerignore  executedownload.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
Notebooks/: BO_Optimisation_BWR_NxN.ipynb  GA_BO_Memetic_BWR_NXN.ipynb  GA_Optimisation_BWR_NxN.ipynb  RL_Optimisation_BWR_NxN.ipynb  model.xml  tallies.out
Results/BWR_6x6_HP-BO/: BWR_6x6_HP-BO_all_evaluations.csv  BWR_6x6_HP-BO_report.txt
Results/BWR_6x6_HP-GA/: BWR_6x6_HP-GA_all_evaluations.csv  optimised_enrichment_layout_ga.txt
Results/BWR_6x6_HP-GA-BO/: BWR_6x6_HP-GA-BO_all_evaluations.csv  optimised_enrichment_layout_hp-bo.txt
Results/BWR_6x6_HP-RL/: BWR_6x6_HP-RL_all_evaluations.csv  BWR_6x6_HP-RL_report.txt
environments/: __init__.py  bwr_report.py  bwr_vis.py  env.py  heuristics.py  mapping.py
openmc_bo/: __init__.py  bo_loop.py  config.py  gp_surrogate.py  lhs_sampler.py  results.py
openmc_ga/: __init__.py  ga_config.py  ga_fitness.py  ga_loop.py  ga_operators.py  ga_population.py  ga_results.py
openmc_rl/: __init__.py  rl_config.py  rl_env.py  rl_loop.py  rl_policy.py  rl_results.py  rl_utils.py
