[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmc-prism"
version = "0.1.0"
description = "OpenMC-PRISM — Physics-informed Reactor-assembly optimization via Interchangeable AI Search Methods"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["openmc_bo*", "openmc_ga*"]
